2003-10-04  Bradley Bell  <btb@icculus.org>

	* main/netmisc.c: change byte to sbyte, comments/whitespace

2003-10-03  Bradley Bell  <btb@icculus.org>

	* cfile/cfile.c, main/config.c: fix win32 eof bug.

	* arch/win32/ipx_drv.h, arch/win32/winnet.c, include/ipx.h: win32
	networking fixes

	* iff/iff.c, include/gr.h, include/iff.h, include/pstypes.h,
	main/ai2.c, main/aipath.c, main/aistruct.h, main/bm.h,
	main/config.c, main/escort.c, main/fireball.c, main/fuelcen.c,
	main/fuelcen.h, main/gameseg.c, main/gameseg.h, main/laser.c,
	main/lighting.c, main/mglobal.c, main/network.c, main/newdemo.c,
	main/object.c, main/object.h, main/paging.c, main/player.h,
	main/robot.h, main/segment.h, main/state.c, main/switch.c,
	main/switch.h, main/titles.c, main/wall.c, main/wall.h,
	main/weapon.c, main/weapon.h: change byte to sbyte,
	comments/whitespace

	* 2d/bitblt.c, cfile/cfile.c, include/cfile.h, main/ai.c,
	main/ai.h, main/gamemine.c, main/gauges.c, main/kconfig.c,
	main/menu.c, main/multi.c, main/multi.h, main/multibot.c,
	main/newdemo.h, main/render.c, main/scores.c: change byte to sbyte

	* configure.ac: better checking for timeval

2003-10-03  Martin Schaffner <maschaffner@gmx.ch>

	* arch/dos/bak/ipx.c, arch/dos/ipx.c, arch/linux/Makefile.am,
	arch/linux/include/ipx_lin.h, arch/linux/ipx_lin.c,
	arch/linux/ipx_udp.c, arch/linux/linuxnet.c, arch/linux/ukali.c,
	arch/win32/winnet.c, configure.ac, include/byteswap.h,
	include/ipx.h, main/inferno.c, main/menu.c, main/multi.c,
	main/multibot.c, main/network.c: Make network architecture
	choosable from game menu, add support for UDP/IP on Mac OS X and
	Solaris

2003-10-02  Martin Schaffner <maschaffner@gmx.ch>

	* include/byteswap.h: added macros for coping with alignment
	issues

2003-10-02  Bradley Bell  <btb@icculus.org>

	* main/multi.h: added padding to little-endian version of
	netgame_info

	* arch/dos/bak/ipx.c, arch/dos/ipx.c: comments/whitespace

	* main/netmisc.c: delete duplicate function
