@@ -1,5 +1,7 @@
 2003-10-04  Bradley Bell  <btb@icculus.org>
 
+	* cfile/cfile.c, main/config.c: oops, fgets does not return EOF
+
 	* main/netmisc.c: change byte to sbyte, comments/whitespace
 
 2003-10-03  Bradley Bell  <btb@icculus.org>
